Fixed spacing on about page

--- a/styles.css
+++ b/styles.css
@@ -39,10 +39,14 @@
   .left {
     flex: 50%;
     padding: 50px;
+    margin-left: 40px;
   }
   .right {
     flex: 50%;
     padding: 50px;
+   
+
+
   }
   /* About Me Page */
   .about-me-image {
